split of gems for heroku, sqlite is for development, pg for production

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,12 @@
 <body>
 
 <div class="row">
+<div class="col-md-3">
+	Lean UX
 </div>
-Lean UX
+<div class="col-md-9">
+	Lean UX
+</div>
 
 <%= link_to("Home", pages_home_path) %>
 <%= link_to("Brand", pages_brand_path) %>
