--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -3,7 +3,10 @@
 
     .item.active.car-image
       =image_tag('home.jpg', :style => 'min-height:400px;')
-      .carousel-caption{:style => ''}
+      .carousel-caption{:style => 'bottom:200px; text-shadow:none; font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande"'}
         .box{:style => ''}
-          %h1.title{:style => 'font-size:76px; font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande"' }= "Diseño para tu startup"       
-          %a.btn.btn-lg.btn-primary.btn-enroll{:style => "white-space:normal; margin-top:50px; font-size:30px", :href => '#'} Lo quiero
+          %h1.title{:style => 'font-size:76px; ; margin-bottom:50px' }= "Diseño para tu startup"       
+
+          %a.btn-alexus{:style => "white-space:normal; font-size:18px; background-color:#5ac6ff; padding:10px 14px 10px 14px; color:white; margin-right:30px; border:solid #5ac6ff 2px; ", :href => '#'} Lo quiero
+
+          %a.btn-alexus{:style => "white-space:normal; margin-top:50px; font-size:18px; border:solid white 2px; padding:10px 14px 10px 14px; color:white", :href => '#'} Saber más
