--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -7,6 +7,6 @@
         .box{:style => ''}
           %h1.title{:style => 'font-size:76px; ; margin-bottom:50px' }= "Diseño para tu startup"       
 
-          %a.btn-alexus{:style => "white-space:normal; font-size:18px; background-color:#5ac6ff; padding:10px 14px 10px 14px; color:white; margin-right:30px; border:solid #5ac6ff 2px; ", :href => '#'} Lo quiero
+          %a.btn-alexus{:style => "white-space:normal; font-size:18px; background-color:#5ac6ff; padding:10px 14px 10px 14px; color:white; margin-right:30px; border:solid #5ac6ff 2px; ", :href => new_contact_path} Lo quiero
 
-          %a.btn-alexus{:style => "white-space:normal; margin-top:50px; font-size:18px; border:solid white 2px; padding:10px 14px 10px 14px; color:white", :href => '#'} Saber más
+          %a.btn-alexus{:style => "white-space:normal; margin-top:50px; font-size:18px; border:solid white 2px; padding:10px 14px 10px 14px; color:white", :href => new_contact_path} Saber más
