--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -1,9 +1,9 @@
-.container.center
+.container
   %h1 Contacto
   = simple_form_for @contact, :html => {:class => 'form-horizontal' } do |f|
-    = f.input :name, :required => true
-    = f.input :email, :required => true
-    = f.input :message, :as => :text, :required => false, :input_html => {:rows => 10}
+    = f.input :name, label: 'Nombre', :required => true
+    = f.input :email, label: 'Correo electrónico', :required => true
+    = f.input :message, label: 'Mensaje', :as => :text, :required => false, :input_html => {:rows => 10}
 
     .hidden
       = f.input :nickname, :hint => 'Leave this field blank!'
