--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,10 @@
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 
+
 <!-- Optional theme -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
+
 
 
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
@@ -28,7 +30,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-3">
-				<%=image_tag("leanuxlogo.png" , :size => "200x50") %>
+				<%= link_to(image_tag("leanuxlogo.png" , :size => "200x50"), pages_home_path, :style=>"color:white") %>
+
 			</div>
 			<div class="col-md-9">
 				<ul class="nav pull-right">
@@ -44,4 +47,5 @@
 <%= yield %>
 
 </body>
+
 </html>
